--- a/.env
+++ b/.env
@@ -4,4 +4,14 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=""
+DATABASE_URL="postgresql://postgres:8021947cbba@localhost:5432/cidtec?schema=public"
+
+
+
+# FIREBASE
+NEXT_PUBLIC_APIKEY=AIzaSyDYGP3sV4MGgeB6VOSVALUkpJWadgaVrG8
+NEXT_PUBLIC_AUTH_DOMAIN = cidtec-ab757.firebaseapp.com
+NEXT_PUBLIC_PROJECT_ID = cidtec-ab757
+NEXT_PUBLIC_STORAGE_BUCKET = cidtec-ab757.appspot.com
+NEXT_PUBLIC_MESSAGING_SENDER_ID=801256173191
+NEXT_PUBLIC_APP_ID = 1:801256173191:web:7273a39523f302c92c9222
