--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ NEXT_PUBLIC_PROJECT_ID = cidtec-ab757
 NEXT_PUBLIC_STORAGE_BUCKET = cidtec-ab757.appspot.com
 NEXT_PUBLIC_MESSAGING_SENDER_ID=801256173191
 NEXT_PUBLIC_APP_ID = 1:801256173191:web:7273a39523f302c92c9222
+NEXT_PUBLIC_URL = http://localhost:3000/api/
