--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "firebase": "^9.22.1",
+    "formik": "^2.4.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4",
+    "yup": "^1.2.0",
     "zod": "^3.21.4"
   }
 }
